<resources>
    <string name="app_name">nutrient_tracker_v2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="meal_list_fragment_label">Meal List Fragment</string>
    <string name="meal_list_item_edit_fragment_label">Meal List Item Edit Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adapter.mla_foods_are_loading">Foods are loading…</string>
    <string name="iseaten">IsEaten</string>
    <string name="enter_price">Enter price…</string>
    <string name="add_foods">Add foods…</string>
    <string name="add_comments">Add comments…</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>